<resources>
    <string name="app_name">SendMessageFast</string>
    <string name="send_message_fast">Send Message Fast</string>
    <string name="send_sms">SEND SMS</string>
    <string name="name">Name</string>
    <string name="addresses">Addresses</string>
    <string name="information">Information</string>
    <string name="code1">1. Go to a pharmacy or visit a doctor, if recommended after contact. It is valid after 21:00 as well.</string>
    <string name="code2">2. Go to a store of essential goods (supermarket, mini market) Not available after 21:00.</string>
    <string name="code3">3. Go to the bank, to the extent that electronic transaction is not possible. Not available after 21:00.</string>
    <string name="code4">4. Move to help people in need or to accompany underage students to / from school. Not available after 21:00.</string>
    <string name="code5">5. Going to a funeral ceremony under the conditions provided by law or going to divorced parents or parents who are in a dimension that is necessary to ensure communication between parents and children, in accordance with the provisions in force. Not available after 21:00.</string>
    <string name="code6">6. Physical exercise outdoors individually or in pairs, observing in the latter case the necessary distance of 1.5 meters. Not available after 21:00.</string>
    <string name="back">Back</string>
    <string name="surname">Surname</string>
    <string name="confirm">Confirm</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="surname_error">Surname cannot be empty</string>
    <string name="change_name">Change name</string>
    <string name="name_currently_used">Name currently used</string>
    <string name="NameDetailMessage">Type your name and surname</string>
    <string name="add_address">Add address</string>
    <string name="no">No.</string>
    <string name="address">Street</string>
    <string name="location">City</string>
    <string name="postal_code">P.C.</string>
    <string name="add">Add</string>
    <string name="address_error">Street cannot be empty</string>
    <string name="location_error">City cannot be empty</string>
    <string name="number_error">Number cannot be empty</string>
    <string name="postal_error">Postal code cannot be empty</string>
    <string name="my_addresses">My addresses</string>
    <string name="no_address">No address</string>
    <string name="histogram">Histogram</string>
    <string name="codeSent">Code sent</string>
    <string name="send_code_1">Send code 1</string>
    <string name="send_code_2">Send code 2</string>
    <string name="send_code_3">Send code 3</string>
    <string name="send_code_4">Send code 4</string>
    <string name="send_code_5">Send code 5</string>
    <string name="send_code_6">Send code 6</string>
    <string name="send_2_at_13032">Send 2 at 13032</string>
    <string name="_7_move_to_a_store_excluding_food_stores_gas_stations">7. Move to a store (excluding food stores, gas stations) (code 2 at 13032)</string>
    <string name="MessageSent">Message Sent</string>
    <string name="use">Use</string>
    <string name="app_info">App info</string>
    <string name="tap_to_set_favorite_hold_to_delete">Tap to set favorite. Hold to delete</string>
    <string name="Fill">Fill in name and an address first.</string>
    <string name="create_Histogram">Send a message first to create Histogram.</string>
    <string name="enter_name">Enter name</string>
    <string name="Name_Saved">Name saved</string>
    <string name="options">Options</string>


</resources>