<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressActivity">

    <TextView
        android:id="@+id/titleAddress"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/my_addresses"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o" />

    <ListView
        android:id="@+id/address_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toBottomOf="@id/titleAddress"
        app:layout_constraintBottom_toTopOf="@id/addAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/no_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="100dp"
        android:text="@string/no_address"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/titleAddress"
        app:layout_constraintBottom_toTopOf="@id/addAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/Information"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tap_to_set_favorite_hold_to_delete"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@id/addAddress"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <Button
        android:id="@+id/addAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>