<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AppInfo">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background= "@drawable/lightblue"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toEndOf="@+id/title1"
        app:layout_constraintStart_toStartOf="@+id/title1"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="10dp"
        android:textAlignment="center"
        android:text="@string/information"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="40sp"
        app:autoSizeMinTextSize="30sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/code1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="35dp"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:text="@string/code1"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/code2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:text="@string/code2"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code1" />

    <TextView
        android:id="@+id/code3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/code3"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code2" />

    <TextView
        android:id="@+id/code4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:text="@string/code4"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code3" />

    <TextView
        android:id="@+id/code5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/code5"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code4" />

    <TextView
        android:id="@+id/code6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/code6"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code5" />

    <TextView
        android:id="@+id/codeNew2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/_7_move_to_a_store_excluding_food_stores_gas_stations"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code6" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:layout_marginRight="190dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeNew2"
        />

    <Button
        android:id="@+id/histogramButton"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/histogram"
        android:textColor="@color/black"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeNew2"
        />



</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>